# devdocs-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEBT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/worktrees/: llmops-dashboard
.github/workflows/: ci.yml  eval.yml
data/: README.md
docs/: PROJECT.md
eval/: README.md  metrics.py  ragas_runner.py
eval/datasets/: golden_holdout_10.jsonl  golden_qa.jsonl  golden_train_40.jsonl
eval/finetune/: README.md  eval_comparison.py  mine_triples.py  split_holdout.py  train.py
scripts/: fetch_pytorch_docs.sh  probe_retrieval.py  send_real_trace.py
src/devdocs_rag/: __init__.py  config.py
src/devdocs_rag/api/: __init__.py  main.py
src/devdocs_rag/generation/: __init__.py  ark_client.py  errors.py  llm_client.py  prompts.py
src/devdocs_rag/ingestion/: __init__.py  __main__.py  pipeline.py  qdrant_writer.py  state.py
src/devdocs_rag/ingestion/loaders/: __init__.py  code_loader.py  doc_loader.py
src/devdocs_rag/retrieval/: __init__.py  _bm25_registry.py  bm25.py  cross_encoder_reranker.py  dense.py  hybrid.py  reranker.py  sentence_transformer_embedder.py
src/devdocs_rag/ui/: __init__.py  streamlit_app.py
tests/: conftest.py  test_api_mcp_enabler.py  test_ark_client.py  test_bm25.py  test_cross_encoder_reranker.py  test_doc_loader_rst_cleaning.py  test_embedder.py  test_eval_smoke.py  test_hybrid.py  test_hybrid_multi_namespace.py  test_ingestion_pytorch.py  test_retrieval_sanity.py  test_smoke.py  test_state.py
