[project]
name = "devdocs-rag"
version = "0.1.0"
description = "Code-aware RAG over PyTorch docs and personal GitHub repos (dogfooding)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Meizhui Xu" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.2.0",
    "rank-bm25>=0.2.2",
    "ragas>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "httpx>=0.27.0",
    "redis>=5.1.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devdocs_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"eval/**" = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
